# lab-shell-sistemas-operativos

./: CMakeLists.txt  README.md  informe_parte1.md  informe_parte2.md  informe_parte3.md  preguntas.md
src/: builtin.c  builtin.h  createcmd.c  createcmd.h  defs.h  exec.c  exec.h  freecmd.c  freecmd.h  main.c  parsing.c  parsing.h  printstatus.c  printstatus.h  readline.c  readline.h  runcmd.c  runcmd.h  types.h  utils.c  utils.h
